--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>La Meca Deportiva — Demo</title>
+  <title>La Meca Deportiva</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <style>
     body { background: #0E1621; color: #E9ECF1; }
@@ -21,7 +21,7 @@
       <img class="logo" src="/meca-logo.png" alt="La Meca Deportiva (logo placeholder)">
       <div>
         <h1 class="text-3xl font-bold">La Meca Deportiva</h1>
-        <p class="muted text-sm">Comunicaciones · Relatos · Noticias deportivas (demo)</p>
+        <p class="muted text-sm">Comunicaciones · Relatos · Noticias deportivas </p>
       </div>
     </div>
     <div>
@@ -116,7 +116,7 @@
     // Fallback sample data (used if API endpoints are not available)
     const FALLBACK = {
       news: [
-        { category: 'futbol_colombiano', title: 'Once Caldas vs Independiente del Valle: clásico internacional', summary: 'Empate 2-2 en Manizales: emociones y oportunidades para ambos equipos.' },
+        { category: 'futbol_colombiano', title: 'Once Caldas vs Independiente del Valle: clásico internacional', summary: 'victoria del Blanco, blanco  0-2 en Ecuador: emociones y oportunidades para ambos equipos.' },
         { category: 'ciclismo', title: 'Clásico RCN: etapa reina marcó diferencias', summary: 'Los escaladores nacionales abrieron brecha en la general tras una jornada exigente.'},
         { category: 'automovilismo', title: 'Gran Premio de Italia: resumen', summary: 'Monza no defrauda: estrategia y velocidad en la pista.'}
       ],
